--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_core: ^3.0.0
   firebase_auth: ^5.0.0
   email_otp: ^2.1.2
+  slider_button: ^2.1.0
 
 dev_dependencies:
   flutter_test:
