--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_auth: ^5.0.0
   email_otp: ^2.1.2
   slider_button: ^2.1.0
+  holiday_event_api: ^1.0.2
 
 dev_dependencies:
   flutter_test:
