--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,10 @@ dependencies:
   shared_preferences: ^2.2.3
   intl: ^0.19.0
   url_launcher: ^6.3.0
+  restart_app: ^1.2.1
+  image_picker: ^1.1.2
+  photo_manager: ^3.2.0
+  firebase_app_check: ^0.3.0+2
 
 dev_dependencies:
   flutter_test:
